Tests/Should_fail/duplicate_pattern1.int
let main = \x -> let (x # x) =x in x
